--- a/package.json
+++ b/package.json
@@ -60,11 +60,11 @@
     "leaflet": "^1.9.4",
     "lucide": "^0.556.0",
     "lucide-react": "^0.556.0",
-    "next": "15.3.1",
+    "next": "^16.0.8",
     "next-themes": "0.4.6",
     "qs": "^6.14.0",
-    "react": "^18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-toastify": "^11.0.5",
